Revert "Revert "Merge branch 'master' of github.com:tthuem/FeatureIDE""
This reverts commit 40aa87bef5cc908a58ebbd16b7aab5eb7ff9de6c.

Conflicts:
	plugins/de.ovgu.featureide.fm.ui/src/de/ovgu/featureide/fm/ui/editors/featuremodel/editparts/FeatureEditPart.java